# dash-sylvereye

./: .gitignore  CLAUDE.md  DESCRIPTION  LICENSE  MANIFEST.in  NAMESPACE  NOTICE.md  Project.toml  README.md  STAGE2_HANDOFF.md  _validate_init.py  eslint.config.mjs  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-examples.txt  setup.py  usage.py  webpack.config.js
.claude/skills/docs-deploy/: SKILL.md
.github/workflows/: docs-deploy.yml
R/: internal.R  sylvereyeRoadNetwork.R
dash_sylvereye/: SylvereyeRoadNetwork.py  __init__.py  _imports_.py  dash_sylvereye.min.js  dash_sylvereye.min.js.LICENSE.txt  defaults.py  enums.py  metadata.json  package-info.json  utils.py
examples/: 01_BasicVisualization.py  02_BasicInteractivity.py  03_BasicCustomization.py  04_AddingMarkers.py  05_CustomColors.py
examples/cache/: kamppi.graphml
man/: sylvereyeRoadNetwork.Rd
src/: DashSylvereye.jl
src/demo/: App.js
src/jl/: sylvereyeroadnetwork.jl
src/lib/: LeafletSylvereyeRoadNetwork.js  index.js
src/lib/components/: SylvereyeRoadNetwork.react.js
tests/: _run_example.py  requirements.txt  test_examples.py  test_visibility.py
website/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: about.md  build_instructions.md  citation.md  click_events.md  component_parameters.md  data_format.md  data_loading.md  data_utils.md  demo.md  edges_customization.md  example1.md  example2.md  example3.md  example4.md  features.md  installation.md  markers_customization.md  nodes_customization.md  overview.md  running_examples.md  software_stack.md
website/src/components/HomepageFeatures/: index.js  styles.module.css
website/src/css/: custom.css
website/src/pages/: about.js  index.js  index.module.css
website/static/: CNAME
website/static/css/: custom.css
website/versioned_docs/version-0.4.0/: component_parameters.md  data_loading.md  data_utils.md  demo.md  example4.md  example5.md  features.md  installation.md  nodes_customization.md  overview.md
website/versioned_docs/version-0.4.1/: authorship_and_license.md  build_instructions.md  citation.md  click_events.md  component_parameters.md  data_format.md  data_loading.md  data_utils.md  edges_customization.md  example1.md  example2.md  example3.md  markers_customization.md  nodes_customization.md  running_examples.md  software_stack.md
website/versioned_sidebars/: version-0.4.1-sidebars.json
