# Keep `version` in sync with package.json; both must match because the JS
# build (dash-generate-components) writes the npm version into the bundled
# package-info.json, which dash_sylvereye/__init__.py exposes as
# dash_sylvereye.__version__.
[project]
name = "dash_sylvereye"
version = "0.4.0"
description = "Dash Sylvereye is a Plotly Dash component library for producing interactive web-based visualizations of large primal road networks in Python."
# Explicit content-type so PyPI's renderer treats the README as Markdown
# and the jsDelivr-hosted logo + the image-free sections render the same
# way GitHub renders them.
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Alberto Garcia-Robledo", email = "alberto.garob@gmail.com" },
]
keywords = [
    "dash",
    "plotly",
    "visualization",
    "road network",
    "street network",
    "graph",
    "osmnx",
    "openstreetmap",
    "leaflet",
    "pixi",
    "webgl",
    "geospatial",
    "gis",
]
classifiers = [
    "Framework :: Dash",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]
dependencies = [
    "dash>=4.0.0",
    "memoization>=0.4.0",
]

[project.urls]
Homepage = "https://dashsylvereye.observatoriogeo.mx"
Documentation = "https://dashsylvereye.observatoriogeo.mx"
Source = "https://github.com/observatoriogeo/dash-sylvereye"
Issues = "https://github.com/observatoriogeo/dash-sylvereye/issues"
Changelog = "https://github.com/observatoriogeo/dash-sylvereye/releases"

[project.optional-dependencies]
# Pulls dash-generate-components, used by `npm run build:backends`.
dev = [
    "dash[dev]>=4.0.0",
]
# Runtime deps for the scripts under examples/ and usage.py.
examples = [
    "osmnx>=2.0",
    "numpy",
]
# Pulls in sumolib so dash_sylvereye.utils.load_from_sumo_network works
# out of the box. Users with a system-wide SUMO install (apt install sumo)
# can keep using the function's sumolib_path argument instead.
sumolib = [
    "sumolib>=1.0",
]
# Integration test deps. Selenium is intentionally past dash[testing]'s
# <=4.2 ceiling because we drive Chrome directly (not via dash_duo), and
# selenium >=4.6 ships Selenium Manager which auto-fetches ChromeDriver.
test = [
    "osmnx>=2.0",
    "numpy",
    "pytest>=7.0",
    "selenium>=4.20",
    "pillow",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dash_sylvereye*"]

[tool.uv]
# Treat this project as a uv-managed library: uv sync installs `.` itself
# (in editable mode by default) alongside its extras.
package = true
